<resources>
    <!-- Mathematics Intro String Res -->
    <string name="mathematics">Mathematics</string>

    <!-- Mathematics Home Screen Custom Action Bar String Res -->
    <string name="exp">%s exp total</string>
    <string name="current_date">current date: %s</string>

    <!-- Mathematics Home Screen Button String Res -->
    <string name="training_mode">Training Mode</string>
    <string name="challenge_mode">Challenge Mode</string>
    <string name="cookie_mode">Cookie Mode!!!</string>
    <string name="advancements">Advancements</string>

    <!-- Snake String Res -->
    <string name="app_name">MathematicsApp</string>
    <string name="current_score">Score: %s</string>
    <string name="last_score">Last score: %s</string>
    <string name="high_score">High score: %s</string>
    <string name="start_game_prompt">Touch the screen to start the game</string>
    <string name="congratulations">Congratulations, you finished the game</string>

    <!-- Training Mode (10 subjects) -->
    <!-- 1 --> <string name="assigning_numbers_their_places">Assigning numbers their place</string>
    <!-- 2 --> <string name="reading_and_writing_absolute_value">Reading and writing absolute value</string>
    <!-- 3 --> <string name="added_signed_numbers">Added signed numbers</string>
    <!-- 4 --> <string name="making_a_difference_with_signed_numbers">Making a difference with signed numbers</string>
    <!-- 5 --> <string name="multiplying_signed_numbers">Multiplying signed numbers</string>
    <!-- 6 --> <string name="dividing_signed_numbers">Dividing signed numbers</string>
<!--    &lt;!&ndash; 7 &ndash;&gt; <string name="grouping_symbols">Grouping symbols</string>-->
    <!-- 7 --> <string name="distributive_property">Distributive property</string>
    <!-- 8 --> <string name="associative_rule">Associative rule</string>
<!--    &lt;!&ndash; 10 &ndash;&gt; <string name="commutative_rule">Commutative rule</string>-->
    <!-- 9 --> <string name="solve_basic_equations">Solve basic equations</string>

    <!-- Assigning numbers their place -->
    <string name="which_is_larger">Which is larger, </string>

    <!-- Number Pad Res -->
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="zero">0</string>
    <string name="minus">-</string>


</resources>