<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="75dp"
        android:background="@color/neon_orange">

        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_centerVertical="true"
            android:layout_marginLeft="20dp"
            android:src="@drawable/ic_back"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/training_mode"
            android:textSize="35sp"
            android:layout_centerInParent="true"/>

    </RelativeLayout>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/dark_bg">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <Button
                android:id="@+id/button1"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="10dp"
                android:layout_marginHorizontal="20dp"
                android:text="@string/assigning_numbers_their_places"
                android:textSize="20sp"
                android:background="@color/neon_orange"/>

            <Button
                android:id="@+id/button2"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:layout_marginHorizontal="20dp"
                android:text="@string/reading_and_writing_absolute_value"
                android:textSize="20sp"
                android:background="@color/neon_orange"/>

            <Button
                android:id="@+id/button3"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:layout_marginHorizontal="20dp"
                android:text="@string/added_signed_numbers"
                android:textSize="20sp"
                android:background="@color/neon_orange"/>

            <Button
                android:id="@+id/button4"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:layout_marginHorizontal="20dp"
                android:text="@string/making_a_difference_with_signed_numbers"
                android:textSize="20sp"
                android:background="@color/neon_orange"/>

            <Button
                android:id="@+id/button5"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:layout_marginHorizontal="20dp"
                android:text="@string/multiplying_signed_numbers"
                android:textSize="20sp"
                android:background="@color/neon_orange"/>

            <Button
                android:id="@+id/button6"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:layout_marginHorizontal="20dp"
                android:text="@string/dividing_signed_numbers"
                android:textSize="20sp"
                android:background="@color/neon_orange"/>
        </LinearLayout>
    </ScrollView>
</LinearLayout>