<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="75dp"
        android:background="@color/neon_orange">

        <ImageView
            android:id="@+id/exercise_one_back_button"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_centerVertical="true"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:src="@drawable/ic_back"/>

        <TextView
            android:id="@+id/action_bar_title_exercise_one"
            android:layout_toRightOf="@id/exercise_one_back_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/solve_basic_equations"
            android:textSize="20sp"
            android:layout_centerVertical="true"/>

    </RelativeLayout>
    <LinearLayout
        android:id="@+id/exercise_one_contents"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/dark_bg">

        <LinearLayout
            android:id="@+id/exercise_one_question_area"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:layout_marginHorizontal="20dp"
            android:paddingVertical="10dp"
            android:orientation="vertical"
            android:background="@color/neon_orange">

            <TextView
                android:id="@+id/question"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="10dp"
                android:text="foo"
                android:textSize="15sp"/>

        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="30dp"
            android:layout_marginHorizontal="20dp"
            android:paddingVertical="10dp"
            android:background="@color/neon_orange">

            <TextView
                android:id="@+id/current_question"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="10dp"
                android:text="Current Question: "
                android:textSize="10sp"/>

        </LinearLayout>
        <LinearLayout
            android:id="@+id/exercise_one_line"
            android:layout_width="match_parent"
            android:layout_height="8dp"
            android:layout_marginTop="70dp"
            android:orientation="horizontal">

        </LinearLayout>
        <RelativeLayout
            android:id="@+id/exercise_one_inputs"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:layout_marginHorizontal="20dp"
                android:layout_marginBottom="20dp"
                android:layout_alignParentBottom="true">

                <LinearLayout
                    android:id="@+id/numpad"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:weightSum="4"
                        android:orientation="vertical">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="0dp"
                            android:layout_weight="1"
                            android:weightSum="3"
                            android:orientation="horizontal">

                            <RelativeLayout
                                android:id="@+id/one"
                                android:layout_width="0dp"
                                android:layout_height="match_parent"
                                android:layout_weight="1"
                                android:layout_margin="5dp"
                                android:background="@color/neon_orange">

                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_centerInParent="true"
                                    android:text="@string/one"
                                    android:textSize="15sp"/>

                            </RelativeLayout>
                            <RelativeLayout
                                android:id="@+id/two"
                                android:layout_width="0dp"
                                android:layout_height="match_parent"
                                android:layout_weight="1"
                                android:layout_margin="5dp"
                                android:background="@color/neon_orange">

                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_centerInParent="true"
                                    android:text="2"
                                    android:textSize="15sp"/>

                            </RelativeLayout>
                            <RelativeLayout
                                android:id="@+id/three"
                                android:layout_width="0dp"
                                android:layout_height="match_parent"
                                android:layout_weight="1"
                                android:layout_margin="5dp"
                                android:background="@color/neon_orange">

                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_centerInParent="true"
                                    android:text="3"
                                    android:textSize="15sp"/>

                            </RelativeLayout>
                        </LinearLayout>
                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="0dp"
                            android:layout_weight="1"
                            android:weightSum="3"
                            android:orientation="horizontal">

                            <RelativeLayout
                                android:id="@+id/four"
                                android:layout_width="0dp"
                                android:layout_height="match_parent"
                                android:layout_weight="1"
                                android:layout_margin="5dp"
                                android:background="@color/neon_orange">

                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_centerInParent="true"
                                    android:text="@string/four"
                                    android:textSize="15sp"/>

                            </RelativeLayout>
                            <RelativeLayout
                                android:id="@+id/five"
                                android:layout_width="0dp"
                                android:layout_height="match_parent"
                                android:layout_weight="1"
                                android:layout_margin="5dp"
                                android:background="@color/neon_orange">

                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_centerInParent="true"
                                    android:text="@string/five"
                                    android:textSize="15sp"/>

                            </RelativeLayout>
                            <RelativeLayout
                                android:id="@+id/six"
                                android:layout_width="0dp"
                                android:layout_height="match_parent"
                                android:layout_weight="1"
                                android:layout_margin="5dp"
                                android:background="@color/neon_orange">

                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_centerInParent="true"
                                    android:text="@string/six"
                                    android:textSize="15sp"/>

                            </RelativeLayout>
                        </LinearLayout>
                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="0dp"
                            android:layout_weight="1"
                            android:weightSum="3"
                            android:orientation="horizontal">

                            <RelativeLayout
                                android:id="@+id/seven"
                                android:layout_width="0dp"
                                android:layout_height="match_parent"
                                android:layout_weight="1"
                                android:layout_margin="5dp"
                                android:background="@color/neon_orange">

                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_centerInParent="true"
                                    android:text="@string/seven"
                                    android:textSize="15sp"/>

                            </RelativeLayout>
                            <RelativeLayout
                                android:id="@+id/eight"
                                android:layout_width="0dp"
                                android:layout_height="match_parent"
                                android:layout_weight="1"
                                android:layout_margin="5dp"
                                android:background="@color/neon_orange">

                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_centerInParent="true"
                                    android:text="@string/eight"
                                    android:textSize="15sp"/>

                            </RelativeLayout>
                            <RelativeLayout
                                android:id="@+id/nine"
                                android:layout_width="0dp"
                                android:layout_height="match_parent"
                                android:layout_weight="1"
                                android:layout_margin="5dp"
                                android:background="@color/neon_orange">

                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_centerInParent="true"
                                    android:text="@string/nine"
                                    android:textSize="15sp"/>

                            </RelativeLayout>
                        </LinearLayout>
                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="0dp"
                            android:layout_weight="1"
                            android:weightSum="3"
                            android:orientation="horizontal">

                            <RelativeLayout
                                android:id="@+id/zero"
                                android:layout_width="0dp"
                                android:layout_height="match_parent"
                                android:layout_weight="1"
                                android:layout_margin="5dp"
                                android:background="@color/neon_orange">

                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_centerInParent="true"
                                    android:text="@string/zero"
                                    android:textSize="15sp"/>

                            </RelativeLayout>
                            <RelativeLayout
                                android:id="@+id/minus"
                                android:layout_width="0dp"
                                android:layout_height="match_parent"
                                android:layout_weight="1"
                                android:layout_margin="5dp"
                                android:background="@color/neon_orange">

                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_centerInParent="true"
                                    android:text="-"
                                    android:textSize="15sp"/>

                            </RelativeLayout>
                            <RelativeLayout
                                android:id="@+id/backspace"
                                android:layout_width="0dp"
                                android:layout_height="match_parent"
                                android:layout_weight="1"
                                android:layout_margin="5dp"
                                android:background="@color/neon_orange">

                                <ImageView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_centerInParent="true"
                                    android:src="@drawable/ic_backspace"/>

                            </RelativeLayout>
                        </LinearLayout>
                    </LinearLayout>
                </LinearLayout>
            </RelativeLayout>
        </RelativeLayout>
    </LinearLayout>
</LinearLayout>